added comments in views

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,13 +7,18 @@
       <label for="p">Password</label>
       <input type="password" name="password" id="p" />
 
+      <!-- recaptcha -->
       <div
         class="g-recaptcha"
         data-sitekey="6LctV7AeAAAAAB6drHUuMlXKJMl66oq7XKDakKww"
       ></div>
       <button type="submit" id="S-btn">Sign In</button>
     </form>
+
+    <!-- For signing up  -->
     <p><a href="/signup">Sign Up</a> if you are not registerd</p>
+
+    <!-- signin through google authentication -->
     <p>
       <a href="/auth/google"><i class="fa-brands fa-google"></i> Sign In</a>
     </p>
