--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,6 +1,7 @@
 <div id="prof">
   <h1>Welcome <%= user.name%></h1>
 
+  <!-- To reset the password -->
   <details>
     <summary>reset password</summary>
     <form id="Updt-pwd" action="/update-password/<%=user._id%>" method="post">
